--- a/scss/blocks/other-pages/_project.scss
+++ b/scss/blocks/other-pages/_project.scss
@@ -15,6 +15,18 @@
     margin-bottom: 40px;
 }
 
+.project-details__button-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+
+    @media (max-width: 620px) {
+        width: 100%;
+    }
+}
+
 .project-details__desc {
     color: var(--title-color);
     line-height: 1.3;
@@ -25,9 +37,9 @@
     em {
         color: var(--text-color);
         font-size: var(--font-size-text-big);
-       font-family: $font-founders;
-       font-style: normal;
-       line-height: 2;
+    font-family: $font-founders;
+    font-style: normal;
+    line-height: 2;
     }
 
     @media (max-width: 620px) {
