--- a/css/main.css
+++ b/css/main.css
@@ -249,12 +249,13 @@ a {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
   margin-bottom: 20px;
 }
 @media (max-width: 620px) {
   .project-details__button-wrapper {
     width: 100%;
+    margin-bottom: 40px;
   }
 }
 
