--- a/scss/blocks/other-pages/_project.scss
+++ b/scss/blocks/other-pages/_project.scss
@@ -19,11 +19,12 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 20px;
 
     @media (max-width: 620px) {
         width: 100%;
+        margin-bottom: 40px;
     }
 }
 
