--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -66,10 +66,10 @@ html, body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    font-family: 'FoundersGrotesk', sans-serif;
     letter-spacing: -0.5px;
     color: var(--text-color);
     text-transform: uppercase;
+    font-family: $font-founders, sans-serif;
 }
 
 body {
