--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Links */
@@ -79,8 +78,7 @@ input::-ms-clear {
 
 button, input[type=submit] {
   display: inline-block;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-color: transparent;
   background: none;
   cursor: pointer;
@@ -151,7 +149,7 @@ legend {
   --header-top-size-1: var(--top-size-big-1);
   --header-top-size-2: var(--top-size-big-2);
 }
-@media (max-width: 960px) {
+@media (max-width: 620px) {
   :root {
     --header-top-size-1: var(--top-size-small-1);
     --header-top-size-2: var(--top-size-small-2);
@@ -169,13 +167,8 @@ legend {
 }
 
 html, body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   min-height: 100vh;
   letter-spacing: -0.5px;
   color: var(--text-color);
@@ -225,6 +218,7 @@ a {
 }
 @media (max-width: 960px) {
   .title-1 {
+    font-size: var(--font-size-h2);
     padding: 0 20px;
   }
 }
@@ -267,7 +261,6 @@ a {
   color: transparent;
   overflow: hidden;
   text-shadow: 0 calc(var(--progress) * -1) #000000, 0 calc(var(--height) - var(--progress)) rgb(0, 0, 0);
-  -webkit-transition: 0.7s;
   transition: 0.7s;
 }
 .button:hover {
@@ -279,6 +272,7 @@ a {
 }
 .button--github {
   background-color: var(--accent2);
+  text-transform: uppercase;
 }
 .button--github i {
   margin-left: 5px;
@@ -286,6 +280,7 @@ a {
 }
 .button--link {
   background-color: var(--accent);
+  text-transform: uppercase;
 }
 .button--link i {
   margin-left: 5px;
@@ -307,16 +302,10 @@ a {
 }
 /* Dark mode btn */
 .dark-mode-btn {
-  -webkit-box-ordinal-group: 10;
-      -ms-flex-order: 9;
-          order: 9;
+  order: 9;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 51px;
   height: 26px;
   padding: 5px;
@@ -325,9 +314,7 @@ a {
 }
 @media (max-width: 960px) {
   .dark-mode-btn {
-    -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0;
+    order: 0;
     margin-right: 10px;
     margin-left: auto;
   }
@@ -342,7 +329,6 @@ a {
   height: 24px;
   border-radius: 50%;
   background-color: var(--white);
-  -webkit-transition: left 0.2s ease-in;
   transition: left 0.2s ease-in;
 }
 .dark-mode-btn--active::before {
@@ -357,36 +343,23 @@ a {
 .project-details {
   max-width: 865px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
 .project-details-cover {
   max-width: 100%;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.25);
   margin-bottom: 40px;
 }
 
 .project-details__button-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
   margin-bottom: 20px;
 }
@@ -480,16 +453,9 @@ a {
 .content-list {
   margin: 0 auto;
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   row-gap: 40px;
 }
 @media (max-width: 620px) {
@@ -518,29 +484,17 @@ a {
 }
 
 .about-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-column-gap: 50px;
-     -moz-column-gap: 50px;
-          column-gap: 50px;
+  align-items: start;
+  justify-content: space-between;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
   margin-bottom: 100px;
 }
 @media (max-width: 1200px) {
   .about-wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
     row-gap: 50px;
   }
 }
@@ -580,61 +534,38 @@ a {
 
 .marquee {
   --gap: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   gap: var(--gap);
 }
 
 .marquee__content {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-shrink: 0;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   min-width: 100%;
   gap: var(--gap);
 }
 
-@-webkit-keyframes scroll {
-  from {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-  to {
-    -webkit-transform: translateX(calc(-100% - var(--gap)));
-            transform: translateX(calc(-100% - var(--gap)));
-  }
-}
-
 @keyframes scroll {
   from {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
   to {
-    -webkit-transform: translateX(calc(-100% - var(--gap)));
-            transform: translateX(calc(-100% - var(--gap)));
+    transform: translateX(calc(-100% - var(--gap)));
   }
 }
 /* marquee */
 .marquee {
   --gap: 5rem;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   overflow: hidden;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   gap: var(--gap);
 }
@@ -643,38 +574,30 @@ a {
   color: var(--text-color);
   font-family: "FoundersGrotesk", sans-serif;
   font-size: 3rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-shrink: 0;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   gap: var(--gap);
   min-width: 100%;
 }
 
 @keyframes scroll {
   from {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
   to {
-    -webkit-transform: translateX(calc(-100% - var(--gap)));
-            transform: translateX(calc(-100% - var(--gap)));
+    transform: translateX(calc(-100% - var(--gap)));
   }
 }
 /* Pause animation when reduced-motion is set */
 @media (prefers-reduced-motion: reduce) {
   .marquee__content {
-    -webkit-animation-play-state: paused !important;
-            animation-play-state: paused !important;
+    animation-play-state: paused !important;
   }
 }
 /* Enable animation */
 .enable-animation .marquee__content {
-  -webkit-animation: scroll 50s linear infinite;
-          animation: scroll 50s linear infinite;
+  animation: scroll 50s linear infinite;
 }
 
 /* Reverse animation */
@@ -684,7 +607,6 @@ a {
 
 /* Attempt to size parent based on content. Keep in mind that the parent width is equal to both content containers that stretch to fill the parent. */
 .marquee--fit-content {
-  max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
 }
@@ -698,51 +620,27 @@ a {
 
 /* Enable position absolute animation on the duplicate content (last-child) */
 .enable-animation .marquee--pos-absolute .marquee__content:last-child {
-  -webkit-animation-name: scroll-abs;
-          animation-name: scroll-abs;
-}
-
-@-webkit-keyframes scroll-abs {
-  from {
-    -webkit-transform: translateX(calc(100% + var(--gap)));
-            transform: translateX(calc(100% + var(--gap)));
-  }
-  to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
+  animation-name: scroll-abs;
 }
 
 @keyframes scroll-abs {
   from {
-    -webkit-transform: translateX(calc(100% + var(--gap)));
-            transform: translateX(calc(100% + var(--gap)));
+    transform: translateX(calc(100% + var(--gap)));
   }
   to {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 .contact-wrapper {
   margin-top: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 @media (max-width: 1200px) {
   .contact-wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     row-gap: 50px;
     text-align: center;
   }
@@ -769,8 +667,7 @@ a {
 
 .form {
   background-color: rgba(0, 0, 0, 0.8);
-  -webkit-box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.35);
-          box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.35);
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
   border-radius: 10px;
@@ -819,35 +716,21 @@ form textarea:active {
 }
 
 .nav-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: 30px;
-     -moz-column-gap: 30px;
-          column-gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
   row-gap: 20px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .nav-row .nav-list {
   margin-left: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-column-gap: 40px;
-     -moz-column-gap: 40px;
-          column-gap: 40px;
+  align-items: center;
+  flex-wrap: wrap;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
   row-gap: 15px;
   font-weight: 500;
 }
@@ -872,7 +755,6 @@ form textarea:active {
   background-color: var(--accent2);
 }
 .logo-small {
-  -webkit-transition: all 0.1s ease-in;
   transition: all 0.1s ease-in;
 }
 .logo-small:hover {
@@ -884,7 +766,6 @@ form textarea:active {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background-color: var(--white);
 }
@@ -905,12 +786,10 @@ form textarea:active {
     opacity: 0;
   }
   .hamburger.active .bar:nth-child(1) {
-    -webkit-transform: translateY(8px) rotate(45deg);
-            transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
   }
   .hamburger.active .bar:nth-child(3) {
-    -webkit-transform: translateY(-8px) rotate(-45deg);
-            transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
   }
   .nav-list {
     width: 100%;
@@ -921,15 +800,11 @@ form textarea:active {
     left: -100%;
     top: 70px;
     gap: 0;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     background-color: rgba(0, 0, 0, 0.9);
     -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px); /* Apply the blur effect to the background */
     text-align: center;
-    -webkit-transition: 0.3s;
     transition: 0.3s;
   }
   .nav-list__item {
@@ -941,20 +816,12 @@ form textarea:active {
 }
 .header {
   position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
+  justify-content: center;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-column-gap: 190px;
-     -moz-column-gap: 190px;
-          column-gap: 190px;
+  align-items: center;
+  flex-wrap: wrap;
+  -moz-column-gap: 190px;
+       column-gap: 190px;
   min-height: 895px;
   margin-top: -100px;
 }
@@ -975,8 +842,7 @@ form textarea:active {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -985,6 +851,7 @@ form textarea:active {
 }
 
 .header__wrapper-headline {
+  position: relative;
   color: var(--header-text);
 }
 .header__wrapper-headline em {
@@ -1008,7 +875,7 @@ form textarea:active {
 }
 @media (max-width: 960px) {
   .header__wrapper-headline__title {
-    font-size: 2.5rem;
+    font-size: 4.2rem;
   }
 }
 @media (max-width: 620px) {
@@ -1027,7 +894,7 @@ form textarea:active {
 }
 @media (max-width: 960px) {
   .header__wrapper-headline__skills {
-    font-size: 2.5rem;
+    font-size: 4.2rem;
   }
 }
 @media (max-width: 620px) {
@@ -1035,17 +902,15 @@ form textarea:active {
     font-size: 2.5rem;
   }
 }
-@media (max-width: 960px) {
+@media (max-width: 620px) {
   .header__wrapper-headline__skills {
     height: 80px;
   }
 }
 .header__wrapper-headline__skills span {
   position: relative;
-  -webkit-animation: animation 20s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
-          animation: animation 20s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
+  animation: animation 20s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+  animation-delay: 0.5s;
 }
 .header__wrapper-headline p {
   font-size: 0.8rem;
@@ -1054,33 +919,26 @@ form textarea:active {
   letter-spacing: 0.5px;
 }
 
-@-webkit-keyframes animation {
-  0%, 100% {
-    top: 0;
-  }
-  20% {
-    top: 0;
-  }
-  25% {
-    top: var(--header-top-size-1);
-  }
-  45% {
-    top: var(--header-top-size-1);
-  }
-  50% {
-    top: 0;
-  }
-  70% {
-    top: 0;
-  }
-  75% {
-    top: var(--header-top-size-1);
-  }
-  95% {
-    top: var(--header-top-size-1);
-  }
+.arrow {
+  position: absolute;
+  bottom: 50px;
+  animation: animation-arrow 5s ease-in-out infinite;
 }
 
+@keyframes animation-arrow {
+  0%, 100% {
+    bottom: 50px;
+  }
+  30% {
+    bottom: 30px;
+  }
+  50% {
+    bottom: 50px;
+  }
+  70% {
+    bottom: 30px;
+  }
+}
 @keyframes animation {
   0%, 100% {
     top: 0;
@@ -1123,34 +981,40 @@ form textarea:active {
 }
 
 .projects {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   gap: 30px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+@media (max-width: 960px) {
+  .projects {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .project {
   max-width: 370px;
   background-color: var(--project-card-bg);
-  -webkit-box-shadow: var(--box-shadow);
-          box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow);
   border-radius: 10px;
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 .project__img {
   border-radius: 10px;
 }
 .project:hover {
-  -webkit-transform: scale(1.02);
-          transform: scale(1.02);
+  transform: scale(1.02);
+}
+@media (max-width: 960px) {
+  .project {
+    max-width: 70%;
+  }
+}
+@media (max-width: 620px) {
+  .project {
+    max-width: 100%;
+  }
 }
 
 .footer {
@@ -1166,30 +1030,19 @@ form textarea:active {
 }
 
 .social {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: 30px;
-     -moz-column-gap: 30px;
-          column-gap: 30px;
+  justify-content: center;
+  align-items: center;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
   margin-bottom: 25px;
 }
 
 .social__item {
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
   transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 }
 .social__item:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 @media (max-width: 620px) {
   .social__item {
@@ -1204,4 +1057,4 @@ form textarea:active {
 }
 .copyright p + p {
   margin-top: 1rem;
-}
+}/*# sourceMappingURL=main.css.map */
