--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -35,7 +35,7 @@
 
 
 .header__wrapper-headline {
-
+    position: relative;
     color: var(--header-text);
 
     em {
@@ -55,20 +55,20 @@
     &__title {
             @include custom-heading($font-hanson, $font-weight-bold, var(--font-size-h1), 1.1, 10px);
 
-            @include responsive-font-size(960px, 2.5rem);
+            @include responsive-font-size(960px, 4.2rem);
             @include responsive-font-size(620px, 2.5rem);
         }
 
     &__skills {
         @include custom-heading($font-hanson, $font-weight-bold, var(--font-size-h1), 1.1, 30px);
         
-        @include responsive-font-size(960px, 2.5rem);
+        @include responsive-font-size(960px, 4.2rem);
         @include responsive-font-size(620px, 2.5rem);
 
         height: 140px;
         overflow: hidden;
 
-        @media (max-width: 960px) {
+        @media (max-width: 620px) {
             height: 80px;
         }
         
@@ -87,6 +87,27 @@
     }
 }
 
+.arrow {
+    position: absolute;
+    bottom: 50px;
+    animation: animation-arrow 5s ease-in-out infinite;
+}
+
+
+@keyframes animation-arrow {
+    0%, 100% {
+        bottom: 50px;
+    }
+    30% {
+        bottom: 30px;
+    }
+    50% {
+        bottom: 50px;
+    }
+    70% {
+        bottom: 30px;
+    }
+}
 
 
 
