--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -32,6 +32,7 @@
 
     &--github {
         background-color: var(--accent2);
+        text-transform: uppercase;
 
         i {
             margin-left: 5px;
@@ -41,6 +42,8 @@
 
     &--link {
         background-color: var(--accent);
+        text-transform: uppercase;
+
         
         i {
             margin-left: 5px;
