--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -5,7 +5,7 @@
     position: sticky;
     top: 0px;
     padding: 20px 0;
-    border-bottom: 1px solid $dark-border;
+    border-bottom: 1px solid var(--black-border);
     background-color: rgba($color: #000000, $alpha: 0.7);
     backdrop-filter: blur(12px); /* Apply the blur effect to the background */
 
