--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ legend {
   --project-card-text: var(--black);
   --box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
   /* Header-animation */
-  --top-size-small-1: -90px;
+  --top-size-small-1: -80px;
   --top-size-small-2: -180px;
   --top-size-big-1: -130px;
   --top-size-big-2: -260px;
@@ -360,7 +360,7 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 150px;
 }
 @media (max-width: 620px) {
   .project-details__button-wrapper {
@@ -428,7 +428,7 @@ a {
   color: var(--title-color);
   text-transform: uppercase;
   text-align: start;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   font-family: "Hanson", sans-serif;
   font-size: var(--font-size-h3);
 }
@@ -437,7 +437,7 @@ a {
   font-family: "Hanson", sans-serif;
   font-weight: bold;
   font-size: var(--font-size-h4);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .project-details__main-text p {
   font-size: var(--font-size-text-big);
@@ -650,13 +650,16 @@ a {
 }
 
 .contact-text {
-  max-width: 600px;
+  max-width: 670px;
+  word-spacing: -20px;
   font-family: "Hanson", sans-serif;
-  font-size: var(--font-size-h2);
+  font-size: 4rem;
   color: var(--title-color);
+  line-height: 1;
 }
 @media (max-width: 620px) {
   .contact-text {
+    word-spacing: normal;
     font-size: var(--font-size-h3);
   }
 }
@@ -892,7 +895,7 @@ form textarea:active {
   font-weight: 700;
   font-size: var(--font-size-h1);
   line-height: 1;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   height: 130px;
   overflow: hidden;
 }
